@@ -1,8 +1,10 @@
 ocaml (3.10.0-9) UNRELEASED; urgency=low
 
-  * NOT RELEASED YET
+  [ Samuel Mimram ]
+  * Suggest "tarballs" instead of "upstream" in the policy as directory name
+    for storing upstream sources since it is more standard.
 
- -- Stefano Zacchiroli <zack@debian.org>  Sun, 02 Sep 2007 23:23:23 +0200
+ -- Samuel Mimram <smimram@debian.org>  Tue, 25 Sep 2007 10:59:07 +0100
 
 ocaml (3.10.0-8) unstable; urgency=low
 
